--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo Deployment started on `date`
       - echo Syncing S3 Content
       # REPLACE yourwebsite.com WITH THE NAME OF YOUR S3 BUCKET THAT HOSTS YOUR APP'S STATIC WEBSITE
-      - aws s3 sync ./public/ s3://backend.xyz
+      - aws s3 sync . s3://backend.xyz
   build:
     commands:
       - echo Invalidating CloudFront Cache
